--- a/example.html
+++ b/example.html
@@ -10,6 +10,11 @@
   </head>
 
   <body>
-    <script></script>
+    <h1></h1>
+    <script>
+    addEventListener('load', () => {
+      $('h1').textContent = "Hello, world"
+    })
+    </script>
   </body>
 </html>
