--- a/example.html
+++ b/example.html
@@ -11,9 +11,12 @@
 
   <body>
     <h1></h1>
+    <button>Click me</button>
     <script>
     addEventListener('load', () => {
       $('h1').textContent = "Hello, world"
+
+      $('button').addEventListener('click', console.log)
     })
     </script>
   </body>
