--- a/example.html
+++ b/example.html
@@ -12,6 +12,7 @@
   <body>
     <h1></h1>
     <button>Click me</button>
+    <button>Click me</button>
     <script>
     addEventListener('load', () => {
       $('h1').textContent = "Hello, world"
