--- a/example.html
+++ b/example.html
@@ -17,6 +17,8 @@
     addEventListener('load', () => {
       $('h1').textContent = "Hello, world"
 
+      $('button').forEach(console.log)
+
       $('button').addEventListener('click', console.log)
     })
     </script>
