Use pipe in both examples

--- a/example.html
+++ b/example.html
@@ -23,7 +23,7 @@
       $('button').addEventListener('click', console.log)
 
       $('button').addEventListener('click', () => {
-        $('#tallies').textContent += 1
+        $('#tallies').textContent += '|'
       })
       
     })
