--- a/example.html
+++ b/example.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -13,20 +13,19 @@
     <h1></h1>
     <button>Add Tally</button>
     <button>Add Tally</button>
-    <p id=tallies></p>
+    <p id="tallies"></p>
     <script>
-    addEventListener('load', () => {
-      $('h1').textContent = "Hello, world"
+      addEventListener("load", () => {
+        $("h1").textContent = "Hello, world";
 
-      $('button').forEach(console.log)
+        $("button").forEach(console.log);
 
-      $('button').addEventListener('click', console.log)
+        $("button").addEventListener("click", console.log);
 
-      $('button').addEventListener('click', () => {
-        $('#tallies').textContent += '|'
-      })
-      
-    })
+        $("button").addEventListener("click", () => {
+          $("#tallies").textContent += "|";
+        });
+      });
     </script>
   </body>
 </html>
