--- a/example.html
+++ b/example.html
@@ -15,17 +15,17 @@
     <button>Add Tally</button>
     <p id="tallies"></p>
     <script>
-      addEventListener("load", () => {
-        $("h1").textContent = "Hello, world";
+      addEventListener('load', () => {
+        $('h1').textContent = 'Hello, world'
 
-        $("button").forEach(console.log);
+        $('button').forEach(console.log)
 
-        $("button").addEventListener("click", console.log);
+        $('button').addEventListener('click', console.log)
 
-        $("button").addEventListener("click", () => {
-          $("#tallies").textContent += "|";
-        });
-      });
+        $('button').addEventListener('click', () => {
+          $('#tallies').textContent += '|'
+        })
+      })
     </script>
   </body>
 </html>
