--- a/example.html
+++ b/example.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>Example</title>
-    <script src="smalldollar.js"></script>
+    <script src="halfdollar.js"></script>
     <style></style>
   </head>
 
