Wrap when first child is function

--- a/example.html
+++ b/example.html
@@ -23,6 +23,8 @@
 
         $('button').forEach(console.log)
 
+        console.log($('button').textContent)
+
         $('button').addEventListener('click', console.log)
 
         $('button').addEventListener('click', () => {
